--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,12 +51,12 @@ p {
   color: #00204a;
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
 }
 
-button {
+button.add {
   min-height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -67,6 +67,8 @@ button {
   padding-bottom: 6px;
   border-width: 0;
 }
+
+button:hover {background: #795ba5;}
 
 input[type="text"] {
   text-align: center;
