--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,12 +9,14 @@
 
         <!-- use a for loop to render additions individually by looping through entire array -->
         <% newListItems.forEach(function(newListItem) { %>
-            <div class="item">
-                <input type="checkbox">
-                <p>
-                    <%= newListItem.name %>
-                </p>
-            </div>
+            <form action="/delete" method="POST">
+                <div class="item">
+                    <input type="checkbox" name="checkbox" value="<%=newListItem._id%>" onChange="this.form.submit()">
+                    <p>
+                        <%= newListItem.name %>
+                    </p>
+                </div>
+            </form>
             <% }); %>
 
                 <form class="item" action="/" method="POST">
@@ -23,7 +25,7 @@
                             and we trigger a post request to the home route. Which will be caught by app.post method in app.js file.  -->
                     <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
 
-                    <button type="submit" name="list" value=<%=listTitle%>>+</button>
+                    <button type="submit" class="add" name="list" value=<%=listTitle%>>+</button>
                     <!-- Submit button is same for both routes "/" & "/work". And it'll redirect to "/" route irrspective of where we click it from.
                     But since we have put name and value fields, it'll get passed further. And depending on it's value, we can apply logic in "/" route of app.js. -->
 
