add delete-items functionality in custom todo Lists

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -16,6 +16,7 @@
                         <%= newListItem.name %>
                     </p>
                 </div>
+                <input type="hidden" name="listName" value="<%= listTitle %>"></input>
             </form>
             <% }); %>
 
